@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix for tracker #2825935 `cast consecrate` regression introduced at revision
+11827, Sat Jun 13 2009 in server/spell_effect.c that resulted in "You are
+not standing over an altar!" even when standing on an altar.  The regression
+caused the altar check to iterate over character inventory instead of
+objects below the character.   Various spelling issues also corrected.
+Kevin Bulgrien 2009-08-03
+
 Fix whitespace issue with an attack message "viciously strikes".
 Kevin Bulgrien 2009-08-01
 
